--- a/changelog/4.2.5.md
+++ b/changelog/4.2.5.md
@@ -1,3 +1,6 @@
+# Features
+* [wcml-2091] Added 'wcml_hide_cart_alert_dialog' filter to support hide cart alert switching dialog
+
 # Fixes
 * [wcml-2196] Cannot update Purchase note (any other custom field) once the job is completed
 * [wcml-2189] New order admin emails have un-translated heading and subject when admin language is different of default
@@ -13,5 +16,3 @@
 * [wcml-2161] Fix a bug that the price calculation is not correct in combination with WC Bookings and WC Deposit plugin
 * [wcml-2149] MaxStore Pro theme compatibility for mini cart
 * [wcml-2127] Product price was doubled on cart in combination with Booking and Product Addons
-# New filters
-* [wcml-2091] Added 'wcml_hide_cart_alert_dialog' filter to support hide cart alert switching dialog
