--- a/changelog/4.4.0.md
+++ b/changelog/4.4.0.md
@@ -42,3 +42,4 @@
 * [wcml-2538] WP Fastest Cache compatibility - fixed currency switcher problem
 * [wcml-2532] Added ability to set custom prices for secondary currencies in WC Product Add-Ons
 * [wcml-2201] Update minimum requirements
+* [wcml-2011] Added ability to add custom payment methods for each currency
